Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106975

Qt webengineview Web page requestfullscreen invalid

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.4.1, 6.5.0 Beta1
    • 5.15.2, 5.15.10
    • WebEngine
    • None
    • Qt 15.2 window10
    • Windows
    • 1837eeb966 (qt/qtwebengine/dev) 6f1fe5d158 (qt/qtwebengine/6.4) 26ebdc62a6 (qt/qtwebengine/6.3) 26ebdc62a6 (qt/tqtc-qtwebengine/6.3) 6f1fe5d158 (qt/tqtc-qtwebengine/6.4) 1837eeb966 (qt/tqtc-qtwebengine/dev) 6f1fe5d158 (qt/tqtc-qtwebengine/6.4.1)

    Description

      The Qt webengineview module will fail to request full screen pages in the following operations

      1. Click the input tab to select the file

      2. Through element.RequestFullscreen requests full screen operation, which will fail

      code:

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mnegyokru Martin Negyokru
            cxtan 晨曦 檀
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes