Fix fullscreen request blocking after running fileChooser

Chromium blocks fullscreen requests while the fileSelectListener is alive.
Release it manually after the accept/reject signal.

Fixes: QTBUG-106975
Pick-to: 6.3 6.4
Change-Id: Iac4868b8ab0268b8ddb94912286155af73ebd343
Reviewed-by: Szabolcs David <davidsz@inf.u-szeged.hu>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>